FINERACT-2354: Introduce reaging preview API